--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
+    "npm": "^6.2.0",
+    "stylus": "0.52.4",
     "stylus-loader": "^3.0.1",
-    "stylus": "0.52.4"
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
